Some file movements

--- a/public/main.html
+++ b/public/main.html
@@ -2,10 +2,10 @@
         <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
           <head>
             <title>Modia - by mafi</title>
-            <script src="jquery.min.js"></script>
-            <script type="text/javascript" src="jquery.gamequery.js"></script>
-            <script type="text/javascript" src="jquery.cacheimage.js"></script>
-            <script type="text/javascript" src="game.js"></script>
+            <script src="./javascripts/jquery.min.js"></script>
+            <script type="text/javascript" src="./javascripts/jquery.gamequery.js"></script>
+            <script type="text/javascript" src="./javascripts/jquery.cacheimage.js"></script>
+            <script type="text/javascript" src="./javascripts/game.js"></script>
             <script src="http://192.168.5.38:3000/socket.io/socket.io.js"></script>
             <style type="text/css">
               html,body{
